--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,79 @@
-# Compiled class file
-*.class
+import java.io.*;
+import java.math.*;
+import java.security.*;
+import java.text.*;
+import java.util.*;
+import java.util.concurrent.*;
+import java.util.regex.*;
 
-# Log file
-*.log
+public class Solution {
 
-# BlueJ files
-*.ctxt
+    // Complete the cutTheSticks function below.
+    static int[] cutTheSticks(int[] arr) {
+        Arrays.sort(arr);
+        int n=arr.length;
+        int temp=arr[0];
+        int count=1;
+        for(int i=0;i<n;i++){
+            if(arr[i]==temp){
+                continue;
+            }
+            else{
+                temp=arr[i];
+                count++;
+            }
+        }
+        int[] array=new int[count];
+        temp=arr[0];
+        int j=0;
+        int con=0;
+        array[j++]=n;
+        for(int i=0;i<n;i++){
+            if(arr[i]==temp){
+                con++;
+            }
+            else{
+                temp=arr[i];
+                System.out.println(con);
+                array[j++]=n-con;
+                con++;
+            }
+        }
+        return array;
+    }
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+    private static final Scanner scanner = new Scanner(System.in);
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+    public static void main(String[] args) throws IOException {
+        BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter(System.getenv("OUTPUT_PATH")));
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+        int n = scanner.nextInt();
+        scanner.skip("(\r\n|[\n\r\u2028\u2029\u0085])?");
+
+        int[] arr = new int[n];
+
+        String[] arrItems = scanner.nextLine().split(" ");
+        scanner.skip("(\r\n|[\n\r\u2028\u2029\u0085])?");
+
+        for (int i = 0; i < n; i++) {
+            int arrItem = Integer.parseInt(arrItems[i]);
+            arr[i] = arrItem;
+        }
+
+        int[] result = cutTheSticks(arr);
+
+        for (int i = 0; i < result.length; i++) {
+            bufferedWriter.write(String.valueOf(result[i]));
+
+            if (i != result.length - 1) {
+                bufferedWriter.write("\n");
+            }
+        }
+
+        bufferedWriter.newLine();
+
+        bufferedWriter.close();
+
+        scanner.close();
+    }
+}
